--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hungry Nites</title>
     <link rel="stylesheet" href="../src/App.css" />
+    <link rel="icon" href="../src/images/favicon.ico" />
   </head>
   <body>
     <div id="root"></div>
