--- a/public/index.html
+++ b/public/index.html
@@ -10,5 +10,17 @@
   <body>
     <div id="root"></div>
   </body>
+  <!-- 100% privacy-first analytics -->
+  <script
+    async
+    defer
+    src="https://scripts.simpleanalyticscdn.com/latest.js"
+  ></script>
+  <noscript
+    ><img
+      src="https://queue.simpleanalyticscdn.com/noscript.gif"
+      alt=""
+      referrerpolicy="no-referrer-when-downgrade"
+  /></noscript>
   <script type="module" src="../src/App.js"></script>
 </html>
